# polymarket-copytrading-bot-vvvvvvvvvvvv

./: .env.example  Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
src/: config.rs  executor.rs  lib.rs  main.rs  monitor.rs
src/clob/: client.rs  mod.rs  orders.rs
src/config/: env.rs  mod.rs  strategy.rs
src/types/: mod.rs
src/utils/: chain.rs  create_clob_client.rs  health.rs  logger.rs  mod.rs  post_order.rs  spinner.rs  theme.rs
