[package]
name = "polymarket-copy-rust"
version = "0.1.0"
edition = "2021"
description = "Polymarket copy trading bot - Rust port of polymarket-copy-trader"
default-run = "polymarket-copy-rust"

[dependencies]
anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "fs", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
mongodb = "2"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
alloy = { version = "1", features = ["signer-local"] }
chrono = { version = "0.4", features = ["serde"] }
polymarket-client-sdk = { version = "0.4", features = ["clob"] }
rust_decimal = "1.34"
thiserror = "2"
url = "2"
bs58 = "0.4"

[[bin]]
name = "health_check"
path = "src/bin/health_check.rs"

[[bin]]
name = "find_traders"
path = "src/bin/find_traders.rs"

[dev-dependencies]
tempfile = "3"
